apps/server.js/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: server.js
  labels:
    name: server.js
    managed-by: dev-portal
