apps/server.js/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server.js
  namespace: server.js
  labels:
    app: server.js
    environment: production
  annotations:
    argocd-image-updater.argoproj.io/image-list: server.js=ghcr.io/quancv2k4/nodejs_tesst
    argocd-image-updater.argoproj.io/write-back-method: git
    argocd-image-updater.argoproj.io/write-back-target: apps/server.js/deployment.yaml
    argocd-image-updater.argoproj.io/server.js.update-strategy: latest
    argocd-image-updater.argoproj.io/server.js.allow-tags: regexp:^.*$
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server.js
  template:
    metadata:
      labels:
        app: server.js
        environment: production
      annotations:
        timestamp: "1761640833"
    spec:
      containers:
      - name: server.js
        image: ghcr.io/quancv2k4/nodejs_tesst:latest
        command: ["/bin/sh", "-c"]
        args:
          - |
            node nodejs-test-01
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "sleep 5"]
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: server.js-data
          mountPath: /app/data
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /api/health/
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/health/
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: server.js-data
        persistentVolumeClaim:
          claimName: server.js-pvc
