apps/server.js/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server.js-service
  namespace: server.js
  labels:
    app: server.js
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: server.js
